--- a/styles/base/_type.scss
+++ b/styles/base/_type.scss
@@ -96,12 +96,13 @@ h6, .h6 {
 }
 
 code {
-	font-family: monospace;
+	font-family: $fontMono;
 	border-radius: 3px;
 	color: #eb5a46;
 	padding: 2px 3px;
 	margin: -1px 2px;
-	font-size: 14px;
+	font-size: 15px;
+	line-height: inherit;
 	color: #e83e8c;
 	word-wrap: break-word;
 	background-color: #f0f0f4;
@@ -111,26 +112,38 @@ pre {
 	-webkit-overflow-scrolling: touch;
 	-webkit-transform: translateZ(0);
 	background-color: #f0f0f4;
-	border-radius: 3px;
+	border-radius: 6px;
 	margin: 12px 0;
 	padding: 10px 12px;
 	word-break: normal;
 	word-wrap: normal;
 	overflow-wrap: normal;
 	tab-size: 4;
+	font-family: $fontMono;
 	font-size: 14px;
-	line-height: 1.5;
+	line-height: 1.2;
 }
 
 pre code {
 	background-color: none;
-	border-radius: 0;
+	border-radius: 3px;
 	box-shadow: none;
 	color: #172b4d;
 	margin: 0;
 	padding: 0;
 	color: #e83e8c;
 }
+
+
+	pre {
+		padding: 0;
+		background-color: transparent;
+	}
+
+	pre code {
+		background-color: transparent;
+		padding: 20px !important;
+	}
 
 /* code, kbd, pre, samp */
 
