--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -3,6 +3,8 @@
 $fontSans:                  'Rubik', sans-serif;
 $fontSerif:                 'Times New Roman', Georgia, serif;
 $fontMono:                  'Ubuntu Mono', monospace;
+$fontMono:                  monospace;
+// $fontMono:                  Consolas,Menlo,Monaco,'Andale Mono WT','Andale Mono','Lucida Console','Lucida Sans Typewriter','DejaVu Sans Mono','Bitstream Vera Sans Mono','Liberation Mono','Nimbus Mono L','Courier New',Courier,monospace;
 $fontMain:                  $fontSans;
 $fontSize:                  16px;
 $lineHeight:                1.50;
