--- a/styles/common.scss
+++ b/styles/common.scss
@@ -15,11 +15,13 @@
 @import 'components/badge';
 @import 'components/box';
 @import 'components/button';
+@import 'components/code';
 @import 'components/comment';
 @import 'components/container';
 @import 'components/diagram';
 @import 'components/icons';
 @import 'components/image';
+@import 'components/layout';
 @import 'components/footer';
 @import 'components/form';
 @import 'components/header';
