--- a/styles/components/_layout.scss
+++ b/styles/components/_layout.scss
@@ -10,28 +10,43 @@ body {
 
 .Sidepanel {
 	height: 100vh;
-	width: 340px;
+	width: 300px;
+	flex: 0 0 auto;
 	padding: 40px;
 	background-color: #2a212F;
 	color: $white;
 	overflow: auto;
+	cursor: default;
+}
+
+.Sidepanel h1 {
+	font-weight: 800;
+}
+
+.Sidepanel hr {
+	border-color: rgba(225,225,255, .22);
 }
 
 .SideNav ul {
 	@include listReset;
-	line-height: 1.25;
+	line-height: 1.35;
 }
 
 .SideNav ul ul {
-	margin-top: 12px;
+	margin-top: 10px;
+}
+
+.SideNav ul li {
+	font-weight: 700;
 }
 
 .SideNav ul ul li {
+	font-weight: normal;
 	padding-left: 20px;
 }
 
 .SideNav ul li + li {
-	margin-top: 12px;
+	margin-top: 10px;
 }
 
 .SideNav ul li:before {
@@ -39,11 +54,14 @@ body {
 }
 
 .SideNav a {
-	color: var(--white);
+	color: rgba(225,225,255, .7);
 	border-bottom: 0 none;
 }
 
+.SideNav a:hover {
+	color: var(--white);
+}
+
 .Main {
-	// padding: 20px;
 	overflow: auto;
 }
