pack of changes #2: the manual, sidepanel, unnecessary styles

--- a/styles/components/_code.scss
+++ b/styles/components/_code.scss
@@ -1,8 +1,10 @@
 :root {
-	--code-string:       #eae585;
+	--code-string:       #eae085;
+	// --code-string:       #B29D4A;
 	// --code-bg:           #343f52;
 	// --code-bg:           #2a212F;
 	--code-bg:           #403c4F;
+	// --code-bg:           #343F52;
 	--code-fore:         #fff;
 	--code-tag:          #62c8f3;
 }
