--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,11 +1,8 @@
 .Footer {
 	cursor: default;
-}
-
-.Footer__top {
 	padding-top: 24px;
 	padding-bottom: 24px;
-	background-color: #323239;
+	background-color: #382f3d;
 	color: $white;
 
 	@include mediaUp(md) {
@@ -14,82 +11,11 @@
 	}
 }
 
-.Footer__top a {
+.Footer a {
 	@include linkReset;
-}
-
-.Footer__top a {
 	color: $white;
 }
 
-.Footer__top a:hover {
+.Footer a:hover {
 	color: $brand;
-}
-
-.Footer__hr {
-	border: 0 none;
-	border-top: 1px solid rgba(255,255,255,.06);
-	margin-top: 40px;
-	margin-bottom: 40px;
-}
-
-.FooterNav {
-	font-weight: 500;
-}
-
-.FooterNav ul {
-	@include listReset(true);
-}
-
-.FooterNav ul > li + li {
-	margin-top: 12px;
-}
-
-.Footer__bottom {
-	padding-top: 28px;
-	padding-bottom: 28px;
-	background-color: #2d2d33;
-	color: rgba(255,255,255,.4);
-	font-size: 12px;
-	line-height: 20px;
-}
-
-.Footer__bottom a {
-	color: rgba(255,255,255,.4);
-}
-
-.Footer__bottom a:hover {
-	color: $white;
-	border-bottom-color: $white;
-}
-
-.Footer__storeLink {
-	display: block;
-	width: 42px;
-
-	@include mediaUp(md) {
-		width: 155px;
-	}
-}
-
-.Footer__storeLink img {
-	display: block;
-}
-
-.Footer__logo {
-	width: 88px;
-	display: block;
-
-	@include mediaUp(md) {
-		width: 158px;
-	}
-}
-
-.StatsCounter {
-	@include linkReset;
-	display: block;
-}
-
-.StatsCounter img {
-	display: block;
 }
